# FPGA-FUN

./: .gitignore  LICENSE  README.md  eslint.config.js  forge.config.ts  forge.env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.renderer.config.ts
api/: connection.py  conway.py  depedencies.py  main.py  predict.py  pyproject.toml  type.py  utils.py
api/data/: figures.npy
src/: App.vue  conway.wgsl  main.ts  preload.ts  renderer.ts  types.d.ts  utils.ts
src/components/: ConwayGame.vue  NumberCanvas.vue
src/components/icons/: IconCounter8.vue  IconHelp.vue  IconSmartToy.vue
src/router/: index.ts
src/views/: AppsView.vue  HomeView.vue  NumberView.vue
verilog/: debouncing.v  display.v  uart_rx.v
